<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple SQLite</string>
    <string name="action_settings">Settings</string>
    <string name="instructions">Fill the information below</string>
    
    <string name="dni">DNI</string>
    <string name="name">Name and Lastname</string>
    <string name="university">University</string>
    <string name="class_registered">Class</string>

    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_update">Update</string>
    <string name="button_show">Show</string>

    <string name="dni_required">Field DNI is required</string>
    <string name="name_required">Field name is required</string>
    <string name="university_required">Field university is required</string>
    <string name="subject_required">Field subject is required</string>

    <string name="data_created">The data was created</string>
    <string name="data_not_exists">There are not data with DNI</string>
    <string name="data_updated">The data was updated</string>
    <string name="data_not_updated">Could not update data</string>
    <string name="data_deleted">The data as deleted</string>
    <string name="data_not_deleted">Could not delete data</string>

</resources>
