<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/instructions" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputDNI"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:hint="@string/dni" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputName"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/inputDNI"
        android:layout_centerHorizontal="true"
        android:hint="@string/name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputUniversity"
        android:hint="@string/university"
        android:layout_below="@+id/inputName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputClass"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/inputUniversity"
        android:layout_alignParentStart="true"
        android:hint="@string/class_registered" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:id="@+id/buttonAdd"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/inputClass"
        android:layout_alignParentStart="true"
        android:onClick="addAction" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:id="@+id/buttonDelete"
        android:layout_alignBottom="@+id/buttonAdd"
        android:layout_alignEnd="@+id/inputClass"
        android:onClick="deleteAction" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/button_show"
        android:id="@+id/buttonShow"
        android:layout_below="@+id/buttonAdd"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:onClick="showAction" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/button_update"
        android:id="@+id/buttonUpdate"
        android:layout_below="@+id/buttonDelete"
        android:layout_alignStart="@+id/buttonDelete"
        android:layout_marginTop="10dp"
        android:onClick="updateAction" />

</RelativeLayout>
